@@ -1,6 +1,8 @@
 2.7.0 ==================================================================
-+ изменена структура БД: в таблицу "books" добавлено поле "filesize";
-  размер файла также теперь отображается в списке найденных книг
++ изменена структура БД: в таблицу "books" добавлено поле "filesize"
++ еще немного копипасты из версии 1.х:
+  в списке найденных книг теперь отображаются размер и формат файла
+  книги
 * изменения в процедурах работы с БД - при изменении версии БД
   программа будет предлагать заново импортировать индексный файл
   библиотеки
